--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-vitest": "^0.2.8",
     "jsdom": "^22.1.0",
     "nuxt": "^3.7.0",
+    "nuxt-icon": "^0.5.0",
     "prettier": "^3.0.2",
     "typescript": "^5.2.2",
     "vitest": "^0.34.3"
